--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  body: MyString
-  date: 2021-02-03 16:48:25
+  content: MyString
+  project_id: 1
+  user_id: 1
 
 two:
-  body: MyString
-  date: 2021-02-03 16:48:25
+  content: MyString
+  project_id: 1
+  user_id: 1
